Se creo la secccion del footer y su CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,12 +20,11 @@
          del menu de navegacion y la primera imagen del pagina -->
     <header class="hero">
         <nav class="nav container">
-
             <div class="nav__logo">
                 <h2 class="nav__title">Curso CSS.</h2>
             </div>
 
-            <ul class="nav__link nav_link--menu=">
+            <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
                     <a href="" class="nav__links">Inicio</a>
                 </li>
@@ -45,11 +44,9 @@
             <div class="nav__menu">
                 <img src="../IMAGES/menu.svg" class="nav_img" />
             </div>
-
         </nav>
 
         <section class="hero__container container">
-
             <h1 class="hero__title">Aprende CSS desde CERO hasta dominarlo</h1>
             <p class="hero__paragraph">
                 Elige aprender de una vez por todas, una vez que termines este curso
@@ -57,14 +54,12 @@
                 animaciones
             </p>
             <a href="" class="cta">Comienza ahora</a>
-
         </section>
     </header>
 
     <main>
         <!-- Creamos la section 2 de, ¿Qué aprenderás en este curso? donde se explica una breve reseña lo que aprenderas en curdo de CSS -->
         <section class="container abouter">
-
             <h2 class="subtitle">¿Qué aprenderás en este curso?</h2>
             <p class="about__paragraph">
                 Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom
@@ -72,7 +67,6 @@
             </p>
 
             <div class="about__main">
-
                 <article class="about__icons">
                     <img src="../IMAGES/shapes.svg" class="about__icon" />
                     <h3>CSS Layouts</h3>
@@ -99,15 +93,12 @@
                         quas ipsa mollitia vero.
                     </p>
                 </article>
-
             </div>
-
         </section>
 
         <!-- Creamos la section 3 de, Curso completo de CSS. ¡Domina CSS de una vez por todas! -->
         <section class="knowledge">
             <div class="knowledge__container container">
-
                 <div class="knowledge__texts">
                     <h2 class="subtitle">
                         Curso completo de CSS. ¡Domina CSS de una vez por todas!
@@ -124,9 +115,7 @@
                 <figure class="knowledge__picture">
                     <img src="../IMAGES/macbook.png" class="knowledge__img" />
                 </figure>
-
             </div>
-
         </section>
 
         <!-- Creamos la section 4 de, Obten el price perfecto para aprender, 
@@ -171,15 +160,13 @@
                     </div>
                     <a href="" class="price__cta">Empieza ahora</a>
                 </div>
-
             </div>
-
         </section>
 
         <!-- Creamos la section 5 de, donde se elabora un slider y dentro del slider
                 se especica el nombre del estudiante y una pequeña biografia acerca de el y 
                 la imagen del estudiante-->
-        <section>
+        <section class="testimony">
             <div class="testimony__container container">
                 <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before" />
 
@@ -200,11 +187,9 @@
                     <figure class="testimony__picture">
                         <img src="../IMAGES/face.jpg" class="testimony__img" />
                     </figure>
-
                 </section>
 
                 <section class="testimony__body" data-id="2">
-
                     <div class="testimony__texts">
                         <h2 class="subtitle">
                             Mi nombre es Juan Carlos Bohorquez
@@ -214,19 +199,15 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Consequuntur ratione saepe veritatis ullam
                         </p>
-
                     </div>
 
                     <figure class="testimony__picture">
                         <img src="../IMAGES/face4.jpg" class="testimony__img" />
                     </figure>
-
                 </section>
 
                 <section class="testimony__body" data-id="3">
-
                     <div class="testimony__texts">
-
                         <h2 class="subtitle">
                             Mi nombre es Jordan Alexander
                             <span class="testimony__course">estudiante de CSS</span>
@@ -237,89 +218,152 @@
                             cumque molestias qui adipisci aliquid quidem corrupti tempora
                             fugiat, provident quia voluptatibus distinctio illo!
                         </p>
-
                     </div>
 
                     <figure class="testimony__picture">
                         <img src="../IMAGES/face3.jpg" class="testimony__img" />
                     </figure>
-
                 </section>
 
                 <img src="../IMAGES/rightarrow.svg" class="testimony__arrow" id="next" />
-
             </div>
-
         </section>
 
         <!-- Creamos la section 6 de, Preguntas frecuentes, donde se elaboran 3 articulos con diferntes  temas relacionadas a las preguntas -->
         <section class="questions container">
             <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="question__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias fugiat
-                dolore corrupti numquam animi?</p>
+            <p class="question__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias
+                fugiat dolore corrupti numquam animi?
+            </p>
             <section class="questions__container">
                 <article class="questions__padding" id="change">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS?
+                        <h3 class="questions__title">
+                            ¿Qué es CSS?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="questions__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img" />
                             </span>
                         </h3>
 
                         <p class="questions__show">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
-                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
-                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
-                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
-                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
-                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Eveniet, veniam, maiores libero quod consequatur sunt eius
+                            asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam
+                            illo repudiandae! Fuga obcaecati tempora vel. Laudantium,
+                            voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque
+                            quibusdam, nulla ab exercitationem in dolorem. Ad at culpa vero
+                            ex. Commodi neque cumque numquam?
                         </p>
                     </div>
                 </article>
 
                 <article class="questions__padding" id="change1">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué aprenderé en este curso?
+                        <h3 class="questions__title">
+                            ¿Qué aprenderé en este curso?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="questions__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img" />
                             </span>
                         </h3>
 
                         <p class="questions__show">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
-                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
-                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
-                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
-                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
-                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Eveniet, veniam, maiores libero quod consequatur sunt eius
+                            asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam
+                            illo repudiandae! Fuga obcaecati tempora vel. Laudantium,
+                            voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque
+                            quibusdam, nulla ab exercitationem in dolorem. Ad at culpa vero
+                            ex. Commodi neque cumque numquam?
                         </p>
                     </div>
                 </article>
 
                 <article class="questions__padding" id="change2">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS GRID?
+                        <h3 class="questions__title">
+                            ¿Qué es CSS GRID?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="questions__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img" />
                             </span>
                         </h3>
 
                         <p class="questions__show">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
-                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
-                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
-                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
-                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
-                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Eveniet, veniam, maiores libero quod consequatur sunt eius
+                            asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam
+                            illo repudiandae! Fuga obcaecati tempora vel. Laudantium,
+                            voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque
+                            quibusdam, nulla ab exercitationem in dolorem. Ad at culpa vero
+                            ex. Commodi neque cumque numquam?
                         </p>
                     </div>
                 </article>
             </section>
+
+            <section class="questions__offer">
+                <h2 class="subtitle">¿Estas listo para aprender CSS?</h2>
+                <p class="questions__copy">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+                    laborum tempore quibusdam adipisci perferendis recusandae provident
+                    corporis sint error sit, alias aperiam omnis aspernatur odit animi
+                    eaque optio dolore repellendus.
+                </p>
+                <a href="#" class="cta">Aprende ahora</a>
+            </section>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <section class="footer__container container">
+            <nav class="nav nav--footer">
+                <h2 class="footer__title">Curso CSS.</h2>
+
+                <ul class="nav__link nav__link--footer">
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Inicio</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Acerca de</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Contacto</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <form class="footer__form">
+                <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
+                <div class="footer__inputs">
+                    <input type="emial" placeholder="Email:" class="footer__input" id="demo" />
+                    <input type="submit" value="Registrate" class="footer__submit" />
+                </div>
+            </form>
         </section>
 
-    </main>
+        <section class="footer__copy container">
+            <div class="footer__social">
+                <a href="#" class="footer_icons"><img src="../IMAGES/facebook.svg" class="footer__img" /></a>
+                <a href="#" class="footer_icons"><img src="../IMAGES/twitter.svg" class="footer__img" /></a>
+                <a href="#" class="footer_icons"><img src="../IMAGES/youtube.svg" class="footer__img" /></a>
+            </div>
+
+            <h3 class="footer__copyright">Derechos reservados &copy Juan-CB</h3>
+        </section>
+    </footer>
+
     <script src="../JAVASCRIPT/slider.js"></script>
     <script src="../JAVASCRIPT/questions.js"></script>
+    <script src="../JAVASCRIPT/menu.js"></script>
 </body>
 
 </html>
